# TicketToRideLegacyReplay

./: .gitignore  CMakeLists.txt  README.md  SECURITY.md  main.py  pyproject.toml  version.txt.in
.github/: dependabot.yml
.github/workflows/: auto-assign.yml  build.yml  python-application.yml
BackendWorker/: __init__.py  cards.py  colors.py  game.py  starting_data.py
BackendWorker/secret_data/: __init__.py  florida.py
BackendWorker/secret_data/story/: __init__.py  s_1861.py
